# mqtt-fancontroller

./: .clang-format  .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
arduino/: Dockerfile  arduino-cli.yaml  docker-compose.yaml  install-requirements.sh  requirements.txt  upload-sketch.sh
arduino/src/: src.ino
bridge/: Dockerfile  config.yaml  docker-compose.yaml  pyproject.toml
bridge/sample-configs/: config.yaml  mqtt-client.yaml
bridge/src/mqttfancontroller/: engine.py  mqttfancontroller.py
bridge/src/mqttfancontroller/modules/: mqtt.py  printstdoutput.py  timeinput.py
bridge/tests/modules/: test_fancontrollercommunicator.py  test_mqtt.py  test_mqttmessenger.py
bridge/tests/utils/: test_messagebroker.py  test_observable.py
controller/: Dockerfile  arduino-cli.yaml  docker-compose.yaml  requirements.txt  serialtester.py  upload-sketch.sh
controller/arduino/: arduino.ino  serialtester.py
controller/arduino/src/: version.hpp
controller/scematic/: #auto_saved_files#  mqtt-fancontroller-schema.kicad_prl  mqtt-fancontroller-schema.kicad_pro  mqtt-fancontroller-schema.kicad_sch
src/mqttfancontroller/: config.py  engine.py  mqttfancontroller.py
src/mqttfancontroller/inputs/: base.py  timeinput.py
src/mqttfancontroller/modules/: mqtt.py
src/mqttfancontroller/outputs/: base.py  printstdoutput.py
src/mqttfancontroller/utils/: baseprocess.py  component.py  message.py  messagebroker.py  observable.py
tests/modules/: test_mqtt.py
tests/utils/: test_messagebroker.py  test_observable.py
(+55 files in other folders)
